# whisperx-api-server

./: .editorconfig  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CODE_ANALYSIS.md  Dockerfile.cpu  Dockerfile.cuda  Makefile  README.md  compose.yaml  constraints.txt  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements.txt
.github/workflows/: docker-build-and-push-cpu.yml  docker-build-and-push-cuda.yml
patches/: fix-pyannote-auth.patch
src/whisperx_api_server/: config.py  dependencies.py  formatters.py  logger.py  main.py  models.py  transcriber.py
src/whisperx_api_server/api-keys/: keys.json
src/whisperx_api_server/routers/: misc.py  models.py  transcriptions.py
