[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperx-api-server"
version = "1.0.0"
description = "FastAPI server for WhisperX transcription with OpenAI-compatible API"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "WhisperX API Server Contributors"}
]
keywords = ["whisper", "whisperx", "transcription", "api", "fastapi", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.120.4",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "omegaconf>=2.3.0",
    "antlr4-python3-runtime==4.9.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "isort>=5.12.0",
    "bandit[toml]>=1.7.0",
]
cpu = [
    # CPU-specific dependencies
]
cuda = [
    # CUDA-specific dependencies
]

[project.urls]
Homepage = "https://github.com/your-org/whisperx-api-server"
Documentation = "https://github.com/your-org/whisperx-api-server#readme"
Repository = "https://github.com/your-org/whisperx-api-server.git"
Issues = "https://github.com/your-org/whisperx-api-server/issues"

[project.scripts]
whisperx-api-server = "whisperx_api_server.main:create_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whisperx_api_server = ["py.typed"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
    "PERF",   # perflint
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "TRY",    # tryceratops
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (FastAPI depends on this)
    "PLR0913", # too many arguments to function call
    "PLR2004", # magic value used in comparison
    "PLR0911", # too many return statements
    "S101",    # use of assert detected (ok in tests)
    "S104",    # possible binding to all interfaces (intentional for server)
    "TRY003",  # avoid specifying long messages outside exception class
    "TRY300",  # consider moving statement to else block
    "TRY400",  # use logging.exception instead of logging.error
    "TRY401",  # redundant exception in logging.exception
    "ARG001",  # unused function argument (common in FastAPI)
    "G004",    # logging statement uses f-string (acceptable for readability)
    "PLW0602", # using global but no assignment (accessing global dicts)
    "PLW0603", # using global statement (acceptable for semaphore)
    "ASYNC230", # async functions should not open files with blocking methods (to fix later)
    "PTH107",  # os.remove should be Path.unlink (to fix later)
    "PTH110",  # os.path.exists should be Path.exists (to fix later)
    "PTH123",  # open() should be Path.open() (to fix later)
    "UP038",   # use X | Y in isinstance (causes runtime issues in older Python)
    "RUF013",  # PEP 484 implicit Optional (FastAPI handles this)
    "B006",    # mutable default argument (FastAPI Form() handles this specially)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ARG",     # unused arguments are fine in tests (fixtures)
    "PLR2004", # magic values are fine in tests
]
"src/whisperx_api_server/config.py" = [
    "ERA001",  # commented code for documentation
]

[tool.ruff.lint.isort]
known-first-party = ["whisperx_api_server"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Form", "fastapi.Path"]

# =============================================================================
# Black Configuration
# =============================================================================
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

# =============================================================================
# isort Configuration
# =============================================================================
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["whisperx_api_server"]
skip = [".venv", "venv", "__pycache__", ".git"]
skip_gitignore = true

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Too strict for this codebase
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false  # Can cause issues with conditional ignores
strict_equality = true
extra_checks = false  # Relaxed for gradual adoption
check_untyped_defs = false  # Relaxed - enable gradually
disallow_untyped_defs = false  # Enable gradually
disallow_incomplete_defs = false  # Enable gradually
no_implicit_optional = false  # FastAPI uses implicit Optional
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "whisperx.*",
    "torch.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-v",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src/whisperx_api_server"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.paths]
source = [
    "src/whisperx_api_server",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 0  # Set to desired coverage threshold
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Bandit Configuration (Security)
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = [
    "B101",  # assert_used - OK in non-production code
    "B104",  # hardcoded_bind_all_interfaces - intentional for server
]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "conftest.py"]
